--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+set(ZSTD_LIBRARY_PATH "/usr/lib/x86_64-linux-gnu/libzstd.so")
+
 include(GNUInstallDirs)
 
 add_library(xdbc SHARED
@@ -19,7 +21,7 @@ set_target_properties(xdbc PROPERTIES
         PUBLIC_HEADER xdbc/xclient.h)
 
 target_include_directories(xdbc PUBLIC .)
-
+target_link_libraries(${PROJECT_NAME} ${ZSTD_LIBRARY_PATH})
 install(TARGETS xdbc
         LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
         PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
