--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ include(GNUInstallDirs)
 
 add_library(xdbc SHARED
         xdbc/xclient.cpp
-        )
+        xdbc/Decompression/Decompressor.cpp xdbc/Decompression/Decompressor.h)
 
 set_target_properties(xdbc PROPERTIES
         #VERSION ${PROJECT_VERSION}
