inserted uptodate clickhouse image added time logging. began creating plot scripts.

--- a/docker-xdbc.yml
+++ b/docker-xdbc.yml
@@ -35,18 +35,18 @@ services:
       - 15432:5432
     shm_size: '2gb'
 
-  clickhouse:
-    image: my/clickhouse-all-in-one
-    #image: clickhousedb
-    container_name: ch
-    privileged: true
-    ports:
-      - 19000:9000
-      - 18123:8123
-    volumes:
-      - test-data:/data
-      - chdbvol:/var/lib/clickhouse
-    shm_size: '2gb'
+#  clickhouse:
+#    image: clickhouse/clickhouse-server
+#    #image: clickhousedb
+#    container_name: ch
+#    privileged: true
+#    ports:
+#      - 19000:9000
+#      - 18123:8123
+#    volumes:
+#      - test-data:/data
+#     - chdbvol:/var/lib/clickhouse
+#   shm_size: '2gb'
 
 volumes:
   test-data:
