added various plotting files

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ experiments/local_measurements/*
 __pycache__/
 **/plots/.ipynb_checkpoints/
 **/plots/myvenv
-**/plots/*.pdf
+**/experiments/plots/*.pdf
+**/experiments/plots/paper_plots/*.pdf
+**/experiments/plots/current_analysis/*.csv*
 **/plots/*.csv
 experiments/experiment_scheduler/measurements/*
