refactoring profiling info with timestamps & small perf improvements

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ include(GNUInstallDirs)
 
 add_library(xdbc SHARED
         xdbc/xclient.cpp
-        xdbc/Decompression/Decompressor.cpp xdbc/Decompression/Decompressor.h xdbc/env_predictor.h xdbc/env_predictor.cpp)
+        xdbc/Decompression/Decompressor.cpp xdbc/Decompression/Decompressor.h)
 
 set_target_properties(xdbc PROPERTIES
         #VERSION ${PROJECT_VERSION}
