--- a/docker-xdbc.yml
+++ b/docker-xdbc.yml
@@ -18,7 +18,6 @@ services:
       - xdbc-net
     labels:
       com.docker-tc.enabled: 1
-    #cpuset: "0,16,32,48,1,17,33,49,2,18,34,50,3,19,35,51,4,20,36,52,5,21,37,53,6,22,38,54,7,23,39,55"
 
   xdbc-client:
     image: xdbc-client:latest
@@ -33,7 +32,6 @@ services:
       - xdbc-net
     labels:
       com.docker-tc.enabled: 1
-    #cpuset: "8,24,40,56,9,25,41,57,10,26,42,58,11,27,43,59,12,28,44,60,13,29,45,61,14,30,46,62,15,31,47,63"
 
   #xdbc-python:
   #  image: xdbc-python:latest
@@ -49,18 +47,18 @@ services:
   #  labels:
   #    com.docker-tc.enabled: 1
 
-  postgres-1:
-    image: postgresdb
-    container_name: pg1
-    restart: always
-    volumes:
-      - test-data:/data
-      - pgvolume1:/var/lib/postgresql/
-    ports:
-      - 15432:5432
-    shm_size: '2gb'
-    networks:
-      - xdbc-net
+  #postgres-1:
+  #  image: postgresdb
+  #  container_name: pg1
+  #  restart: always
+  #  volumes:
+  #    - test-data:/data
+  #    - pgvolume1:/var/lib/postgresql/
+  #  ports:
+  #    - 15432:5432
+  #  shm_size: '2gb'
+  #  networks:
+  #    - xdbc-net
 
 #  clickhouse:
 #    image: clickhousedb
