--- a/Sinks/CMakeLists.txt
+++ b/Sinks/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.21)
 
-project(xdbc-csvsink VERSION 0.1 DESCRIPTION "xdbc csv sink")
+project(xdbc-sinks VERSION 0.1 DESCRIPTION "xdbc sinks")
 
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -g")
@@ -15,16 +15,18 @@ SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pg")]]
 find_package(spdlog REQUIRED)
 find_package(Boost 1.40.0 REQUIRED system program_options)
 
+find_package(Arrow REQUIRED)
+
 # Include Boost headers and libraries
 #if (Boost_FOUND)
 #    include_directories(${Boost_INCLUDE_DIRS})
 #    link_directories(${Boost_LIBRARY_DIRS})
 #endif()
 
-add_executable(csvsink main.cpp CSVSink.cpp)
+add_executable(xdbcsinks main.cpp CSVSink/CSVSink.cpp PQSink/PQSink.cpp)
 
 # Link dependencies
 set(USED_LIBS ${Boost_SYSTEM_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_PROGRAM_OPTIONS_LIBRARY} ${Boost_REGEX_LIBRARY})
 
 # Link the CSV Sink to required libraries
-target_link_libraries(csvsink PRIVATE xdbc spdlog::spdlog ${USED_LIBS})
+target_link_libraries(xdbcsinks PRIVATE xdbc spdlog::spdlog ${USED_LIBS} -larrow)
